<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerformFunctionOnSelectedBookActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".35"
        android:orientation="horizontal">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".55"
        android:orientation="vertical">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".85"
        android:orientation="horizontal">

    </androidx.constraintlayout.widget.Guideline>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        android:orientation="vertical"
        app:layout_constraintVertical_weight="5">
        <ImageView
            android:id="@+id/imgPerformFunc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            />
        <TextView
            android:id="@+id/titlePerformFunc"
            android:layout_weight=".5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/imgPerformFunc"
            android:hint="@string/title"
            android:text="@string/book_title"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/subtitlePerformFunc"
            android:layout_weight=".5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/imgPerformFunc"
            android:hint="@string/subtitle"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:id="@+id/ll2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/ll1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        app:layout_constraintVertical_weight="5">
        <TextView
            android:id="@+id/authorPerformFunc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/author"
            android:layout_weight="1"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/categoryPerformFunc"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/category"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/pricePerformFunc"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/bookprice"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/publisherPerformFunc"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/publisher"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/publishDatePerformFunc"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/publishdate"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="0dp"
        android:padding="5dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/guideline1"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_weight="5">
    <TextView
        android:id="@+id/hyperTextLinkPerformFunc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/descriptionPerformFunc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="20dp"/>
        <Button
            android:id="@+id/RateBookBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_this_book"
            android:layout_weight=".5"
            android:layout_gravity="center"/>
        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".5">
            <Button
                android:id="@+id/ReviewCommentsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_comments"
                android:layout_marginRight="10dp"
                />
            <Button
                android:id="@+id/buyThisBookBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_this_book"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomnavi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ll3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_bar">

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>