<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/search_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter Book Name to search"/>
   <Button
       android:id="@+id/searchBtn"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:text="@string/search_book"
       android:layout_gravity="center"/>
        <Button
            android:id="@+id/recentlyReviewedBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/recently_reviewed_book"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/maximumReviewedBtn"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/maximum_reviewed_book"/>

    </LinearLayout>

</FrameLayout>